# ViperLang

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Docs/: Main.md
Docs/Development/: FoldersStructure.md
Docs/Grammar/: Grammar.md  nonterminals
Includes/Common/: Assert.hpp  Colors.hpp  Message.hpp
Includes/Lex/: IdentTable.hpp  Lexer.hpp  Location.hpp  Scanner.hpp  Token.hpp  TokenType.hpp
Includes/Parse/: Parser.hpp  ParsingError.hpp
Includes/Trees/: Ast.hpp  AstVisitor.hpp  BasicTree.hpp
Includes/Trees/Parse/: Ast.hpp  AstDumpVisitor.hpp  AstTypeVisitor.hpp  AstVisitor.hpp
Playground/: CMakeLists.txt  Main.cpp
Source/: CMakeLists.txt
Source/Common/: Assert.cpp  Colors.cpp  Message.cpp
Source/Lex/: Lexer.cpp
Source/Misc/: asttypes  asttypes.py  asttypesgen
Source/Misc/asttypes/: asttypes.py
Source/Parse/: Expr.cpp  Fnc.cpp  Parser.cpp  Prim.cpp  Stmt.cpp
Source/Trees/Parse/: AstDumpVisitor.cpp
Tests/: CMakeLists.txt  Main.cpp
Tests/Common/: Assert.cpp
Tests/Lex/: Cases.cpp  Lexer.cpp
Tests/Parse/: Expr.cpp  Prim.cpp
Tests/Trees/: AstTypeCheck.cpp  AstTypeVisitor.hpp  Visitors.cpp
app/: CMakeLists.txt  repl.cpp
docs/: basic  main.md
docs/grammar/: grammar.md
includes/common/: colors.hpp
includes/lex/: ident_table.hpp  lexer.hpp  scanner.hpp  token.hpp  token_type.hpp
src/: CMakeLists.txt
src/common/: colors.cpp  message.cpp
src/lex/: ident_table.hpp  lexer.cpp  lexer.hpp  location.hpp  scanner.hpp  token.hpp  token_type.hpp
src/misc/: tokentype.py  toks
tasks/: 1-lexer.md  2-ast-visitors.md  3-parser.md
tests/lex/: cases.cpp
